
        CHANGES IN spatstat.linnet VERSION 2.1-0

OVERVIEW

    o We thank Andrea Gilardi for contributions.

    o Bug fix in density.lpp

    o Improvement to densityEqualSplit
    
SIGNIFICANT USER-VISIBLE CHANGES

    o densityEqualSplit
    New arguments 'at' and 'leaveoneout' for consistency with other functions.

BUG FIXES

    o density.lpp
    The result had the wrong length if 'x' contained duplicated points
    when 'weights' were given and 'at="points"'.
    [Spotted by Andrea Gilardi]
    Fixed.

        CHANGES IN spatstat.linnet VERSION 2.0-0

OVERVIEW

    o We thank Andrea Gilardi for contributions.

    o Function renamed.
    
    o Bug fix in density.lpp

SIGNIFICANT USER-VISIBLE CHANGES

    o densityHeat
    'densityHeat' has been temporarily renamed 'densityHeatlpp',
    to prevent errors in the package checking process.

BUG FIXES

    o density.lpp
    Crashed if 'weights' were given and 'x' contained duplicated points.
    [Spotted by Andrea Gilardi]
    Fixed.

        CHANGES IN spatstat.linnet VERSION 1.65-9

OVERVIEW

    o Minor internal changes.

        CHANGES IN spatstat.linnet VERSION 1.65-8

OVERVIEW

    o Function renamed.

SIGNIFICANT USER-VISIBLE CHANGES

    o densityHeat
    'densityHeat' has been renamed 'densityHeat.lpp'.


        CHANGES IN spatstat.linnet VERSION 1.65-7

OVERVIEW

    o Tweaks to satisfy CRAN.


        CHANGES IN spatstat.linnet VERSION 1.65-1

OVERVIEW

    o Added NEWS file.


        CHANGES IN spatstat.linnet VERSION 1.65-0

OVERVIEW

    o Package initialised at version 1.65-0

SIGNIFICANT USER-VISIBLE CHANGES

    o spatstat.linnet
    The package 'spatstat.linnet' has been created from a subset
    of the code in the original 'spatstat' package version 1.65-0.
    It contains the functionality for statistical analysis of
    spatial data on a linear network.
    For an overview, see help("spatstat.linnet-package")

    o Execution