@@ -244,6 +244,7 @@ export("rescale.lpp")
 export("resolve.heat.steps")
 export("rhohat.lpp")
 export("rhohat.lppm")
+export("rjitterlpp")
 export("rlpp")
 export("roc.lpp")
 export("roc.lppm")
