@@ -3,7 +3,7 @@
 #
 #  Random point pattern generators for a linear network
 #
-#  $Revision: 1.13 $   $Date: 2020/03/16 10:28:51 $
+#  $Revision: 1.14 $   $Date: 2021/03/19 04:04:44 $
 #
 
 rpoislpp <- function(lambda, L, ..., nsim=1, drop=TRUE) {
@@ -107,6 +107,36 @@ rlpp <- function(n, f, ..., nsim=1, drop=TRUE) {
     seg <- df[ii, "mapXY"]
     tp  <- runif(n, tleft[ii], tright[ii])
     result[[isim]] <- as.lpp(seg=seg, tp=tp, L=L)
+  }
+  result <- simulationresult(result, nsim, drop)
+  return(result)
+}
+
+rjitterlpp <- function(X, radius, ..., nsim=1, drop=TRUE) {
+  verifyclass(X, "lpp")
+  check.1.integer(nsim)
+  stopifnot(nsim >= 1)
+  nX <- npoints(X)
+  if (nX == 0) {
+    result <- rep(list(X), nsim)
+    result <- simulationresult(result, nsim, drop)
+    return(result)
+  }
+  L <- domain(X)
+  mX <- marks(X)
+  cooX <- coords(X)
+  tX <- cooX$tp
+  segX <- cooX$seg
+  ##
+  lo <- pmax(tX-radius, 0)
+  hi <- pmin(tX+radius, 1)
+  ra <- hi - lo
+  ##
+  result <- vector(mode="list", length=nsim)
+  for(isim in 1:nsim) {
+    tnew <- lo + ra * runif(nX)
+    tnew <- pmax(0, pmin(1, tnew))
+    result[[isim]] <- as.lpp(seg=segX, tp=tnew, L=L, marks=mX)
   }
   result <- simulationresult(result, nsim, drop)
   return(result)
